--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -1,3 +1,50 @@
-<p>
-  expense-add-edit works!
-</p>
+<main>
+  <div class="expense-book">
+    <ul>
+      <li>一日三餐</li>
+      <li>生活其他</li>
+      <li>家居装修</li>
+      <li>医疗健康</li>
+      <li>医疗健康</li>
+      <li>电脑办公</li>
+      <li>电脑办公</li>
+      <li>衣着</li>
+    </ul>
+    <button>添加账本</button>
+  </div>
+  <form>
+    <div>
+      <label for="time">日期:</label>
+      <input type="date" id="time">
+    </div>
+
+    <div>
+      <label for="address">地点:</label>
+      <input type="text" id="address">
+    </div>
+
+    <div>
+      <label for="address">支出类别:</label>
+      <input type="text" id="catehory">
+    </div>
+
+    <div>
+      <label for="address">商家:</label>
+      <input type="text" id="catehory">
+    </div>
+
+    <div>
+      <label for="address">付款方式:</label>
+      <input type="text" id="catehory">
+    </div>
+
+    <div>
+      <label for="address">付款账户:</label>
+      <input type="text" id="catehory">
+    </div>
+
+    <div class="detail">
+
+    </div>
+  </form>
+</main>
