--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -10,7 +10,7 @@
       <li>电脑办公</li>
       <li>衣着</li>
     </ul>
-    <button>添加账本</button>
+    <button (click)="addExpenseBook()">添加账本</button>
   </div>
   <form>
     <div>
