--- a/src/app/components/account/components/expense/expense.component.html
+++ b/src/app/components/account/components/expense/expense.component.html
@@ -1,4 +1,6 @@
 <main>
   <expense-add-edit></expense-add-edit>
-  <router-outlet></router-outlet>
+  <div class="dynamic-component">
+    <ng-template dynamic-component></ng-template>
+  </div>
 </main>
