--- a/src/app/core/components/addreess/address-add-edit/address-add-edit.component.html
+++ b/src/app/core/components/addreess/address-add-edit/address-add-edit.component.html
@@ -1,3 +1,42 @@
-<p>
-  address-add-edit works!
-</p>
+<main>
+  <p>添加地址</p>
+  <form>
+    <div>
+      <label>省/直辖市</label>
+      <select name="province" [ngModel]="province" (ngModelChange)="selectProvince($event)">
+        <option value="">--请选择省或直辖市--</option>
+        <option *ngFor="let item of data" [value]="item.name">{{item?.name}}</option>
+      </select>
+    </div>
+    <div>
+      <label>市/直辖市</label>
+      <select name="province" [ngModel]="city" (ngModelChange)="selectCity($event)">
+        <option value="">--请选择市或直辖市--</option>
+        <option *ngFor="let item of cityList" [value]="item.name">{{item?.name}}</option>
+      </select>
+    </div>
+    <div>
+      <label>区/县级市/县</label>
+      <select name="province" [(ngModel)]="area">
+        <option value="">--请选择区或县级市或县--</option>
+        <option *ngFor="let item of areaList" [value]="item.name">{{item?.name}}</option>
+      </select>
+    </div>
+
+    <div style="flex-direction: row;">
+      <input type="checkbox" [(ngModel)]="isCurrenLive">
+      <label>是否当前居住地</label>
+    </div>
+
+    <div>
+      <label>
+        备注:
+      </label>
+      <textarea name="memo" [(ngModel)]="memo"></textarea>
+    </div>
+    <div class="btn-group">
+      <button (click)="add()">添加</button>
+      <button (click)="cancel()">取消</button>
+    </div>
+  </form>
+</main>
