--- a/src/app/core/components/expenseBook/expense-book-add-edit/expense-book-add-edit.component.html
+++ b/src/app/core/components/expenseBook/expense-book-add-edit/expense-book-add-edit.component.html
@@ -17,7 +17,7 @@
 
     <div class="btn-group">
       <button (click)="add()">添加</button>
-      <button>取消</button>
+      <button (click)="cancel()">取消</button>
     </div>
   </form>
 </main>
