--- a/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
+++ b/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
@@ -1,3 +1,79 @@
-<p>
-  expense-detail works!
-</p>
+<main>
+  <div class="day-expense">
+    <span (click)="return()">
+      一日三餐
+    </span>
+    <span>
+      -112.00元
+    </span>
+  </div>
+  <ul class="expense-detail-list">
+    <li>
+      <div class="expense-category">
+        早餐
+      </div>
+      <div class="expense-detail">
+        <ul>
+          <li class="expense-detail-item">
+            <div>
+              <span>牛肉面</span>
+              <!-- <span nz-popover nzPlacement="top" [nzTitle]="titleTemplate" [nzContent]="contentTemplate">
+                <nz-badge nzDot> <i nz-icon type="user" theme="outline"></i></nz-badge>
+              </span>
+              <ng-template #titleTemplate><i nz-icon type="close" theme="outline"></i> Title</ng-template>
+              <ng-template #contentTemplate><i nz-icon type="check" theme="outline"></i> Content</ng-template>
+              <span><i nz-icon type="shopping-cart" theme="outline"></i> 新佳宜</span> -->
+            </div>
+            <div>
+              <span>-10.00元</span>
+              <!-- <span>
+                <i nz-icon type="tags" theme="outline"></i>
+              </span> -->
+              <span>支付宝</span>
+            </div>
+          </li>
+          <li class="expense-detail-item">
+            <div>
+              <span>牛奶</span>
+              <span>步步高</span>
+            </div>
+            <div>
+              <span>-100.00元</span>
+              <span>微信</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
+
+    <li>
+      <div class="expense-category">
+        电子产品
+      </div>
+      <div class="expense-detail">
+        <ul>
+          <li class="expense-detail-item">
+            <div>
+              <span>电脑</span>
+              <span>京东</span>
+            </div>
+            <div>
+              <span>-8899.00元</span>
+              <span>支付宝</span>
+            </div>
+          </li>
+          <li class="expense-detail-item">
+            <div>
+              <span>手机-一加6</span>
+              <span>一加官网</span>
+            </div>
+            <div>
+              <span>-3660.00元</span>
+              <span>招行信用卡</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+</main>
