--- a/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
+++ b/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
@@ -17,18 +17,10 @@
           <li class="expense-detail-item">
             <div>
               <span>牛肉面</span>
-              <!-- <span nz-popover nzPlacement="top" [nzTitle]="titleTemplate" [nzContent]="contentTemplate">
-                <nz-badge nzDot> <i nz-icon type="user" theme="outline"></i></nz-badge>
-              </span>
-              <ng-template #titleTemplate><i nz-icon type="close" theme="outline"></i> Title</ng-template>
-              <ng-template #contentTemplate><i nz-icon type="check" theme="outline"></i> Content</ng-template>
-              <span><i nz-icon type="shopping-cart" theme="outline"></i> 新佳宜</span> -->
+              <span>向东街</span>
             </div>
             <div>
               <span>-10.00元</span>
-              <!-- <span>
-                <i nz-icon type="tags" theme="outline"></i>
-              </span> -->
               <span>支付宝</span>
             </div>
           </li>
@@ -58,18 +50,18 @@
               <span>京东</span>
             </div>
             <div>
-              <span>-8899.00元</span>
+              <span>-889.00元</span>
               <span>支付宝</span>
             </div>
           </li>
           <li class="expense-detail-item">
             <div>
-              <span>手机-一加6</span>
+              <span>一加6</span>
               <span>一加官网</span>
             </div>
             <div>
-              <span>-3660.00元</span>
-              <span>招行信用卡</span>
+              <span>-3660元</span>
+              <span>招行</span>
             </div>
           </li>
         </ul>
