--- a/src/app/components/account/components/expense/expense.component.scss
+++ b/src/app/components/account/components/expense/expense.component.scss
@@ -3,8 +3,8 @@ main {
   height: 100%;
 
   .dynamic-component {
-    width: 235px;
-    border: 1px solid;
-    height: 100%;
+    width: 240px;
+    margin-right: 5px;
+    padding-bottom: 5px;
   }
 }
