--- a/src/app/components/account/components/expense/expense-list/expense-list.component.html
+++ b/src/app/components/account/components/expense/expense-list/expense-list.component.html
@@ -8,21 +8,12 @@
     </span>
   </div>
   <ul>
-    <li (click)="toDetailList()">
+    <li *ngFor="let item of expenseService?.expenseList">
       <span>
-        一日三餐
+        {{item.expenseBookName}}
       </span>
       <span>
-        -112.00元
-      </span>
-    </li>
-
-    <li (click)="toDetailList()">
-      <span>
-        生活用品
-      </span>
-      <span>
-        -168.00元
+        {{item.totalAmount}}元
       </span>
     </li>
   </ul>
