--- a/src/app/components/account/components/expense/expense.component.scss
+++ b/src/app/components/account/components/expense/expense.component.scss
@@ -4,7 +4,7 @@ main {
 
   .dynamic-component {
     width: 240px;
-    margin-right: 5px;
     padding-bottom: 5px;
+    margin: 4px 5px 0 0;
   }
 }
