--- a/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
+++ b/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="day-expense">
     <span (click)="return()">
-      {{data.expenseBookName}}
+      &lt;&lt;{{data.expenseBookName}}
     </span>
     <span>
       -{{data.totalAmount}}元
