--- a/src/app/core/components/participant/participant-add-edit/participant-add-edit.component.scss
+++ b/src/app/core/components/participant/participant-add-edit/participant-add-edit.component.scss
@@ -5,6 +5,10 @@ main {
     margin: 10px 0;
   }
 
+  .inline {
+    display: inline;
+  }
+
   .btn-group {
     display: flex;
     flex-direction: row;
