--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
@@ -284,11 +284,26 @@ main {
   .btn-group {
     display: flex;
     align-items: center;
+    flex-grow: 1;
+    margin: 10px 20px;
     justify-content: center;
-    margin: 20px;
 
     button {
-      margin: 0 20px;
+      margin-right: 20px;
+    }
+  }
+
+  .edit-del {
+    display: flex;
+    align-items: center;
+    margin: 0 20px;
+
+    .btn-group {
+      margin: 10px 0px;
+    }
+
+    a {
+      cursor: pointer;
     }
   }
 }
