--- a/src/app/core/components/participant/participant-add-edit/participant-add-edit.component.html
+++ b/src/app/core/components/participant/participant-add-edit/participant-add-edit.component.html
@@ -5,21 +5,28 @@
       <label>
         名字:
       </label>
-      <input type="text" name="name" [(ngModel)]="name">
+      <input type="text" name="name" [(ngModel)]="participant.name">
     </div>
 
     <div>
       <label>
         别名:
       </label>
-      <input type="text" name="alias" [(ngModel)]="alias">
+      <input type="text" name="alias"  [(ngModel)]="participant.alias">
+    </div>
+
+    <div class="inline">
+      <input type="checkbox" name="isMyself" [(ngModel)]="participant.isMyself" >
+      <label>
+        是否本人
+      </label>
     </div>
 
     <div>
       <label>
         备注:
       </label>
-      <textarea name="memo" [(ngModel)]="memo"></textarea>
+      <textarea name="memo" [(ngModel)]="participant.memo"></textarea>
     </div>
 
     <div class="btn-group">
